tests/conformance/parse/invalid/unclosed_block.ks
// EXPECT: Expected expression before
val x = { val y = 1
